@@ -50,6 +50,7 @@
 - Improve the property browser. Show full arc name.
 - [smart-pattern/valentina#45] Optimize tool box position for big screen resolutions.
 - [smart-pattern/valentina#40] Invalid name of arc in modeling mode.
+- New warning. Error calculating segment of curve.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
